WaveRunnerCounter number label, new outline font, integration in style

--- a/assets/stylesheets/Fonts.css
+++ b/assets/stylesheets/Fonts.css
@@ -7,3 +7,8 @@
     font-family: iPU;
     src: url('../fonts/ipixelu.ttf') format('truetype')
 }
+
+@font-face {
+    font-family: Origami Mommy;
+    src: url('../fonts//origa.ttf') format('truetype')
+}
