New FontNarrow, NextWaveSplash integration & added to HUD, reposition patchup

--- a/assets/stylesheets/Fonts.css
+++ b/assets/stylesheets/Fonts.css
@@ -12,3 +12,8 @@
     font-family: Origami Mommy;
     src: url('../fonts//origa.ttf') format('truetype')
 }
+
+@font-face {
+    font-family: Pixeldown;
+    src: url('../fonts/pixeldown.ttf') format('truetype')
+}
