--- a/assets/stylesheets/Fonts.css
+++ b/assets/stylesheets/Fonts.css
@@ -14,6 +14,6 @@
 }
 
 @font-face {
-    font-family: Pixeldown;
-    src: url('../fonts/pixeldown.ttf') format('truetype')
+    font-family: Upheaval;
+    src: url('../fonts/upheaval.ttf') format('truetype')
 }
